<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>joycon_controller</name>
  <version>0.0.0</version>
  <description>Control Turtlesim by Joy Controller</description>
  <maintainer email="azi.3018r@gmail.com">Azicode</maintainer>
  <license>Apache License, Version 2.0</license>
  
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
